# FormatChanger2

./: ADIAdapter.h  ADIWrapper.h  CMakeLists.txt  LICENSE  README.md  TFDAdapter.h  error_code.h  main.cpp
apps/: CMakeLists.txt  format_changer2.cpp  main.cpp  progress_bar.cpp
apps/ApnoeDetector/: CMakeLists.txt  main.cpp
apps/ChannelExtractor/: CMakeLists.txt  main.cpp
apps/DirectoryWalker/: CMakeLists.txt  main.cpp
apps/FormatChanger/: CMakeLists.txt  main.cpp
apps/FormatChanger2/: CMakeLists.txt  main.cpp
include/ADIDatIO/: channel_reader.hpp  common.hpp  file_reader.hpp  reader.h
include/ADIDatIO/ADIDatIO/: channel_reader.hpp  common.hpp  file_reader.hpp
include/ADIDatIO/detail/: errors.h  str_convert.h
include/Son32/detail/: errors.h
include/Son9/Son9/: common.hpp  file_reader.hpp  file_writer.hpp
include/utils/: console_progress_bar.hpp  logger.hpp  ostream_tee.hpp  output_stream.hpp  progress_bar.hpp
include/utils/streams/: log_stream.hpp  tee.hpp  tee_buf.hpp  tee_stream.hpp
include/utils/utils/: console_progress_bar.hpp
include/utils/utils/config/: boolean.hpp  config_file.hpp  integer.hpp  real.hpp  text.hpp  var.hpp
include/utils/utils/stats/: spearman_r.hpp
include/utils/utils/streams/: log_buf.hpp  log_stream.hpp  tee_buf.hpp  tee_stream.hpp
include/utils/utils/ui/: console_progress_bar.hpp  progress_bar.hpp
son32/: Sonintl.h
src/: CMakeLists.txt
src/ADIDatIO/: CMakeLists.txt  channel_reader.cpp  errors.cpp  errors.hpp  file_reader.cpp  reader.cpp  str_convert.cpp
src/Son32/: CMakeLists.txt  errors.cpp  errors.hpp  file_writer.cpp  str.cpp  str.hpp
src/Son9/: CMakeLists.txt  errors.cpp  errors.hpp  file_reader.cpp  file_writer.cpp  str.cpp  str.hpp
src/imgui/: CMakeLists.txt
src/utils/: CMakeLists.txt  console_progress_bar.cpp  logger.cpp
src/utils/config/: boolean.cpp  config_file.cpp  integer.cpp  real.cpp  text.cpp  var.cpp
src/utils/stats/: spearman_r.cpp
src/utils/streams/: log_buf.cpp  log_stream.cpp  tee.cpp  tee_buf.cpp  tee_stream.cpp
src/utils/ui/: console_progress_bar.cpp
tests/: CMakeLists.txt
tests/config_file/: CMakeLists.txt  create.cpp  load.cpp
tests/load_real_wave/: CMakeLists.txt  main.cpp
